--- a/알고리즘/최단거리/최단거리 알고리즘의 종류 및 특성.md
+++ b/알고리즘/최단거리/최단거리 알고리즘의 종류 및 특성.md
@@ -1,6 +1,3 @@
 |BFS|다익스트라|벨만포드|플로이드 와샬|
 |:---:|:---:|:---:|:---:|
-|가중치가 없거나 있는데 모두 같을때|가중치가 모두 다를때 단 가중치가 모두 양수여야 함|가중치가 모두 다를때 가중치가 음수여도 됨
-음의 사이클 유무 파악도 가능|가중치가 모두 다를때
-가중치가 음수여도 됨
-단, 음의 사이클이 없을때만|
+|가중치가 없거나 있는데 모두 같을때|가중치가 모두 다를때 단 가중치가 모두 양수여야 함|가중치가 모두 다를때 가중치가 음수여도 됨 음의 사이클 유무 파악도 가능|가중치가 모두 다를때가중치가 음수여도 됨 단, 음의 사이클이 없을때만|
