Update 최단거리 알고리즘의 종류 및 특성.md

--- a/알고리즘/최단거리/최단거리 알고리즘의 종류 및 특성.md
+++ b/알고리즘/최단거리/최단거리 알고리즘의 종류 및 특성.md
@@ -1,7 +1,7 @@
 | BFS | 다익스트라 | 벨만포드 | 플로이드 와샬 |
 |:---:|:---:|:---:|:---:|
-| 가중치가 없거나<br>있는데 모두 같을때 | 가중치가 모두 다를때<br>단 가중치가 모두 양수여야 함 | 가중치가 모두 다를때   가중치가 음수여도 됨   음의 사이클 유무 파악도 가능 | 가중치가 모두 다를때   가중치가 음수여도 됨   단, 음의 사이클이 없을때만 |
-| Queue 사용 | 우선순위큐 사용 / 그리디기반 | DP기반   distance\[n\] = min(distance\[n\],   distance\[m\] + E(m, n)) | 2차원배열 사용   DP기반   distance\[i, j\] =min(distance\[i, j\],   distance\[i, n\] + distance\[n, j\]) |
-| O(E) | 시작점에서 각 점까지의 최단거리를 구할 경우 O(ElogV)   모든점에서 모든 점까지의 최단 거리를 구할 경우 O(V\*ElogV) | O(VE) | O(V^3) |
+| 가중치가 없거나<br>있는데 모두 같을때 | 가중치가 모두 다를때<br>단 가중치가 모두 양수여야 함 | 가중치가 모두 다를때<br>가중치가 음수여도 됨<br>음의 사이클 유무 파악도 가능 | 가중치가 모두 다를때<br>가중치가 음수여도 됨<br>단, 음의 사이클이 없을때만 |
+| Queue 사용 | 우선순위큐 사용 /<br>그리디기반 | DP기반<br>distance\[n\] =<br>min(distance\[n\],   distance\[m\] + E(m, n)) | 2차원배열 사용<br>DP기반<br>distance\[i, j\] =<br>min(distance\[i, j\],   distance\[i, n\] + distance\[n, j\]) |
+| O(E) | 시작점에서 각 점까지의 최단거리를 구할 경우 O(ElogV)<br>모든점에서 모든 점까지의 최단 거리를 구할 경우 O(V\*ElogV) | O(VE) | O(V^3) |
 | 하나의 특정 정점에서 다른 정점들까지의 최단경로를 구하는 1:N | 1:N | 1:N | 모든 정점들간의 쌍에 대한 최단 경로를 한번에 구하는 N:M |
-| 그래프의 일부만   주어져도 사용 가능 | 그래프의 일부만   주어져도 사용 가능 | 그래프 전체가 주어져야 제기능   그래프가 무한하면 부적합할 수 있음 | 그래프 전체가 주어져야 제기능   그래프가 무한하면 부적합할 수   있음 |
+| 그래프의 일부만   주어져도 사용 가능 | 그래프의 일부만   주어져도 사용 가능 | 그래프 전체가 주어져야 제기능<br>그래프가 무한하면 부적합할 수 있음 | 그래프 전체가 주어져야 제기능<br>그래프가 무한하면 부적합할 수 있음 |
