--- a/알고리즘/최단거리/최단거리 알고리즘의 종류 및 특성.md
+++ b/알고리즘/최단거리/최단거리 알고리즘의 종류 및 특성.md
@@ -1,4 +1,4 @@
-| BFS | 다익스트라 | 벨만포드 | 플로이드 와샬 |
+| BFS | 다익스트라 | 벨만포드&nbsp;&nbsp; | 플로이드 와샬 |
 |:---:|:---:|:---:|:---:|
 | 가중치가 없거나<br>있는데 모두 같을때 | 가중치가 모두 다를때<br>단 가중치가 모두 양수여야 함 | 가중치가 모두 다를때<br>가중치가 음수여도 됨<br>음의 사이클 유무 파악도 가능 | 가중치가 모두 다를때<br>가중치가 음수여도 됨<br>단, 음의 사이클이 없을때만 |
 | Queue 사용 | 우선순위큐 사용 /<br>그리디기반 | DP기반<br>distance\[n\] =<br>min(distance\[n\],   distance\[m\] + E(m, n)) | 2차원배열 사용<br>DP기반<br>distance\[i, j\] =<br>min(distance\[i, j\],   distance\[i, n\] + distance\[n, j\]) |
